Fix #3569 (#3572)
* [Fix #3569]  Fixing windows path issue

* [Fix #3569] Switching from URI to String

* [Fix #3569] Refining for windows

* [Fix_#3569] Refining uriToPath usage

* [Fix #3569] Temporary commit to debug CI issue

* Revert "[Fix #3569] Temporary commit to debug CI issue"

This reverts commit 24eb3c02db5c3dca8f7c333f12dd8186ff0b7533.

* [Fix #3569] Disable reproducible comparison for spring boot integration

* [Fix #3569] Skip module

* Revert "[Fix #3569] Skip module"

This reverts commit 118ff4b44cf88228f9b601579cc72b0b59fd065b.

* Revert "[Fix #3569] Disable reproducible comparison for spring boot integration"

This reverts commit c2565a943b39dcbc55dc91529905c2ffab049360.